Seperate more than one object from a mesh generates additional edges #32575

Closed
opened 2012-09-18 21:11:41 +02:00 by Constantin Rahn · 6 comments

%%%If you seperate more than one object with "p" in edit mode, than the new objects have sometimes additional edges (with no faces).

From a mesh select a face, separate it with "P".
Without switching to object mode select the next face(es) and seperate into new object.
Repeat this for 5-6 new objects.
Some of the new objects will have more verts and edges than selected to separate.

Campel asked me in IRC to post a file for this bug. I have added a blend an 4 shots to reproduce the problem.
%%%

%%%If you seperate more than one object with "p" in edit mode, than the new objects have sometimes additional edges (with no faces). From a mesh select a face, separate it with "P". Without switching to object mode select the next face(es) and seperate into new object. Repeat this for 5-6 new objects. Some of the new objects will have more verts and edges than selected to separate. Campel asked me in IRC to post a file for this bug. I have added a blend an 4 shots to reproduce the problem. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Tested with Blender 2.64 RC1 Win7 64 from blender.org%%%

%%%Tested with Blender 2.64 RC1 Win7 64 from blender.org%%%

%%%confirmed, will check today.%%%

%%%confirmed, will check today.%%%

%%%fixed r50734.%%%

%%%fixed r50734.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Campbell, Thank you for this fix. :)%%%

%%%Campbell, Thank you for this fix. :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32575
No description provided.