fix [#32575] Seperate more than one object from a mesh generates additional edges